--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="main-box">
             <div class="auto-container clearfix">
                 <div class="logo-box">
-                    <div class="logo"><a href="index.html"><img src="images/logo-2.png" alt="" title=""></a></div>
+                    <div class="logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
                 </div>
 
                 <!--Nav Box-->
@@ -60,11 +60,10 @@
                                 <li class="current dropdown"><a href="index.html">Home</a></li>
                                 <li class="dropdown"><a href="about-us.html">About</a>
                                     <ul>
-                                        <li><a href="about-us.html">About Us</a></li>
-                                        <li><a href="about-manipal.html">About Manipal</a></li>
+                                        <li><a href="about-us.html">SSIC 2017</a></li>
+                                        <li><a href="about-us.html">SSIC 2019</a></li>
+                                        <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
-                                        <li><a href="pricing.html">Pricing</a></li>
-                                        <li><a href="faqs.html">FAQ's</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="speakers.html">Speakers</a></li>
@@ -112,7 +111,7 @@
 
             <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="images/logo-2.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
 
                 <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
             </nav>
@@ -157,9 +156,9 @@
                 <div class="feature-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="icon-box"><img class="icon" src="images/icons/conference.png" style="height:60px;width:auto;"></img></div>
-                        <h4><a href="about.html">About SSIC</a></h4>
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua.</div>
-                        <div class="link-box"><a href="about.html" class="theme-btn">Read More</a></div>
+                        <h4><a href="about-us.html">About SSIC</a></h4>
+                        <div class="text">Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world </div>
+                        <div class="link-box"><a href="about-us.html" class="theme-btn">Read More</a></div>
                     </div>
                 </div>
 
@@ -167,9 +166,9 @@
                 <div class="feature-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
                     <div class="inner-box">
                         <div class="icon-box"><img class="icon" src="images/icons/manipal.png" style="height:60px;width:auto;"></img></div>
-                        <h4><a href="about.html">About Manipal</a></h4>
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua.</div>
-                        <div class="link-box"><a href="about.html" class="theme-btn">Read More</a></div>
+                        <h4><a href="https://jaipur.manipal.edu/">About Manipal</a></h4>
+                        <div class="text">Manipal University in Jaipur is among the list of top universities in Rajasthan offering diploma, undergraduate, postgraduate and PHD courses.</div>
+                        <div class="link-box"><a href="https://jaipur.manipal.edu/" class="theme-btn">Read More</a></div>
                     </div>
                 </div>
 
@@ -177,9 +176,9 @@
                 <div class="feature-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
                     <div class="inner-box">
                         <div class="icon-box"><img class="icon" src="images/icons/temple.png" style="height:60px;width:auto;"></img></div>
-                        <h4><a href="about.html">About Jaipur</a></h4>
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua.</div>
-                        <div class="link-box"><a href="about.html" class="theme-btn">Read More</a></div>
+                        <h4><a href="about-jaipur.html">About Jaipur</a></h4>
+                        <div class="text">Resplendent in the hues of its noble and magnificent past, the historic city of Jaipur stands out as one of the most spectacular and culturally vibrant destinations in the world</div>
+                        <div class="link-box"><a href="about-jaipur.html" class="theme-btn">Read More</a></div>
                     </div>
                 </div>
             </div>
@@ -244,7 +243,7 @@
         <div class="auto-container">
             <div class="sec-title text-center">
                 <span class="title">Speakers</span>
-                <h2>Todays Performers</h2>
+                <h2>KEYNOTE SPEAKERS</h2>
             </div>
 
             <div class="row">
@@ -253,11 +252,11 @@
                 <div class="speaker-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Dale Marke</a></h4>
-                            <span class="designation">Event Manager</span>
+                            <h4 class="name"><a href="speakers-detail.html">Prof Arun K Somani</a></h4>
+                            <span class="designation">Distinguished Professor & Associate Dean for Research, College of Engineering, IOWA University</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure>
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/dr.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -274,11 +273,11 @@
                 <div class="speaker-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Natisha Decoux</a></h4>
+                            <h4 class="name"><a href="speakers-detail.html">Priyadarsi Nanda</a></h4>
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure>
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/Priyadarsi-Nanda.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -295,7 +294,7 @@
                 <div class="speaker-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Adolfo Plahs</a></h4>
+                            <h4 class="name"><a href="speakers-detail.html">Subhajit Bhattacharya</a></h4>
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
