--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
                                 <li class="current dropdown"><a href="index.html">Home</a></li>
-                                <li class="dropdown"><a href="about-us.html">About</a>
+                                <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="about-us.html">SSIC 2017</a></li>
                                         <li><a href="about-us.html">SSIC 2019</a></li>
@@ -879,7 +879,7 @@
                     <div class="inner-column">
                         <div class="sec-title style-two">
                             <span class="title">Reach us</span>
-                            <h2>Direction for the <br>Event hall</h2>
+                            <h2>Direction for  <br>Manipal University Jaipur</h2>
                         </div>
 
                         <div class="event-info-tabs tabs-box">
@@ -893,10 +893,10 @@
                             <div class="tabs-content">
                                 <!--Tab-->
                                 <div class="tab active-tab" id="tab1">
-                                    <h4><span class="icon far fa-calendar"></span> January 20, 2020</h4>
+                                    <h4><span class="icon far fa-calendar"></span> January 22, 2021</h4>
                                     <div class="text">9.00 AM - 04.00 PM</div>
                                     <ul class="info-list">
-                                        <li><span class="icon icon_profile"></span> Dianne Ameter</li>
+                                        <li><span class="icon icon_profile"></span> Ankit Mundra</li>
                                         <li><span class="icon icon_phone"></span> <a href="tel:+690-147-265-345">+123 456 7890</a></li>
                                         <li><span class="icon icon_mail"></span> <a href="mailto:sopport@Eventrox.com">sopport@Eventrox.com</a></li>
                                     </ul>
@@ -904,8 +904,8 @@
 
                                 <!--Tab-->
                                 <div class="tab" id="tab2">
-                                    <h4><span class="icon fa fa-map-marker-alt"></span>Pearl hotel, New york, USA</h4>
-                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
+                                    <h4><span class="icon fa fa-map-marker-alt"></span>Manipal University Jaipur, Jaipur, Rajasthan</h4>
+                                    <div class="text">Jaipur-Ajmer Express Highway, Dehmi Kalan, Near GVK Toll Plaza, Jaipur, Rajasthan 303007</div>
                                 </div>
 
                                 <!--Tab-->
