--- a/about-jaipur.html
+++ b/about-jaipur.html
@@ -36,87 +36,87 @@
 
     <!-- Main Header-->
     <header class="main-header header-style-two">
-        <div class="main-box">
-            <div class="auto-container clearfix">
-                <div class="logo-box">
-                    <div class="logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
-                </div>
+    <div class="main-box">
+        <div class="auto-container clearfix">
+            <div class="logo-box">
+                <div class="logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
+            </div>
 
-                <!--Nav Box-->
-                <div class="nav-outer clearfix">
-                    <!--Mobile Navigation Toggler-->
-                    <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
-                    <!-- Main Menu -->
-                    <nav class="main-menu navbar-expand-md navbar-light">
-                        <div class="navbar-header">
-                            <!-- Togg le Button -->
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="icon flaticon-menu-button"></span>
-                            </button>
-                        </div>
+            <!--Nav Box-->
+            <div class="nav-outer clearfix">
+                <!--Mobile Navigation Toggler-->
+                <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
+                <!-- Main Menu -->
+                <nav class="main-menu navbar-expand-md navbar-light">
+                    <div class="navbar-header">
+                        <!-- Togg le Button -->
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="icon flaticon-menu-button"></span>
+                        </button>
+                    </div>
 
-                        <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
-                            <ul class="navigation clearfix">
-                                <li class="dropdown"><a href="index.html">Home</a></li>
-                                <li class="current dropdown"><a href="about-us.html">About</a>
-                                    <ul>
-                                        <li><a href="about-us.html">SSIC 2017</a></li>
-                                        <li><a href="about-us.html">SSIC 2019</a></li>
-                                        <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
-                                        <li><a href="about-jaipur.html">About Jaipur</a></li>
-                                    </ul>
+                    <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
+                        <ul class="navigation clearfix">
+                            <li class="current dropdown"><a href="index.html">Home</a></li>
+                            <li class="dropdown"><a href="ssic.html">About</a>
+                                <ul>
+                                    <li><a href="about-us.html">SSIC 2017</a></li>
+                                    <li><a href="about-us.html">SSIC 2019</a></li>
+                                    <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
+                                    <li><a href="about-jaipur.html">About Jaipur</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown"><a href="speakers.html">Speakers</a></li>
+                            <li class="dropdown"><a href="schedule.html">Schedule</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </nav>
+                <!-- Main Menu End-->
+
+                <!-- Outer box -->
+                <div class="outer-box">
+                    <!--Search Box-->
+                    <div class="search-box-outer">
+                        <div class="dropdown">
+                            <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flaticon-search"></span></button>
+                            <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
+                                <li class="panel-outer">
+                                    <div class="form-container">
+                                        <form method="post" action="index.html">
+                                            <div class="form-group">
+                                                <input type="search" name="field-name" value="" placeholder="Search Here" required="">
+                                                <button type="submit" class="search-btn"><span class="fa fa-search"></span></button>
+                                            </div>
+                                        </form>
+                                    </div>
                                 </li>
-                                <li class="dropdown"><a href="speakers.html">Speakers</a></li>
-                                <li class="dropdown"><a href="schedule.html">Schedule</a></li>
-                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
-                    </nav>
-                    <!-- Main Menu End-->
+                    </div>
 
-                    <!-- Outer box -->
-                    <div class="outer-box">
-                        <!--Search Box-->
-                        <div class="search-box-outer">
-                            <div class="dropdown">
-                                <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flaticon-search"></span></button>
-                                <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
-                                    <li class="panel-outer">
-                                        <div class="form-container">
-                                            <form method="post" action="index.html">
-                                                <div class="form-group">
-                                                    <input type="search" name="field-name" value="" placeholder="Search Here" required="">
-                                                    <button type="submit" class="search-btn"><span class="fa fa-search"></span></button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <!-- Button Box -->
-                        <div class="btn-box">
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
-                        </div>
+                    <!-- Button Box -->
+                    <div class="btn-box">
+                        <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- Mobile Menu  -->
-        <div class="mobile-menu">
-            <div class="menu-backdrop"></div>
-            <div class="close-btn"><span class="icon flaticon-cancel-1"></span></div>
+    <!-- Mobile Menu  -->
+    <div class="mobile-menu">
+        <div class="menu-backdrop"></div>
+        <div class="close-btn"><span class="icon flaticon-cancel-1"></span></div>
 
-            <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
-            <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
+        <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
+        <nav class="menu-box">
+            <div class="nav-logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
 
-                <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
-            </nav>
-        </div><!-- End Mobile Menu -->
-    </header>
+            <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
+        </nav>
+    </div><!-- End Mobile Menu -->
+</header>
     <!--End Main Header -->
 
     <!--Page Title-->
