--- a/ssic2019.html
+++ b/ssic2019.html
@@ -57,8 +57,8 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class="dropdown"><a href="index.html">Home</a></li>
-                                <li class="current dropdown"><a href="about-us.html">About</a>
+                                <li class="current dropdown"><a href="index.html">Home</a></li>
+                                <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="about-us.html">SSIC 2017</a></li>
                                         <li><a href="about-us.html">SSIC 2019</a></li>
