--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="inner-box">
                         <div class="icon-box"><img class="icon" src="images/icons/manipal.png" style="height:60px;width:auto;"></img></div>
                         <h4><a href="https://jaipur.manipal.edu/">About Manipal</a></h4>
-                        <div class="text">Manipal University in Jaipur is among the list of top universities in Rajasthan offering diploma, undergraduate, postgraduate and PHD courses.</div>
+                        <div class="text">Manipal University in Jaipur is among the list of top universities in Rajasthan offering diploma, undergraduate, postgraduate and PHD courses across diverse streams.</div>
                         <div class="link-box"><a href="https://jaipur.manipal.edu/" class="theme-btn">Read More</a></div>
                     </div>
                 </div>
@@ -1232,9 +1232,6 @@
 
 <!-- Color Palate / Color Switcher -->
 <div class="color-palate">
-    <div class="color-trigger">
-        <i class="fa fa-cog"></i>
-    </div>
     <div class="color-palate-head">
         <h6>Choose Your Demo</h6>
     </div>
