--- a/index.html
+++ b/index.html
@@ -434,16 +434,16 @@
                     <ul class="tab-buttons clearfix">
                         <li class="tab-btn active-btn" data-tab="#tab-1">
                             <span class="day">Day 01</span>
-                            <span class="date">01</span>
-                            <span class="month">Jan</span> 2020
+                            <span class="date">22</span>
+                            <span class="month">Jan</span> 2021
                         </li>
 
                         <li class="tab-btn" data-tab="#tab-2">
                             <span class="day">Day 02</span>
-                            <span class="date">02</span>
-                            <span class="month">Jan</span> 2020
+                            <span class="date">23</span>
+                            <span class="month">Jan</span> 2021
                         </li>
-
+<!-- 
                         <li class="tab-btn" data-tab="#tab-3">
                             <span class="day">Day 03</span>
                             <span class="date">03</span>
@@ -454,7 +454,7 @@
                             <span class="day">Day 04</span>
                             <span class="date">04</span>
                             <span class="month">Jan</span> 2020
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
 
@@ -790,7 +790,7 @@
     <!--End schedule Section -->
 
     <!-- Pricing Section -->
-    <section class="pricing-section-two">
+    <!-- <section class="pricing-section-two">
         <div class="anim-icons">
             <span class="icon icon-line-1 wow zoomIn"></span>
             <span class="icon icon-circle-1 wow zoomIn"></span>
@@ -801,11 +801,11 @@
             <div class="sec-title text-center">
                 <span class="title">Get Ticket</span>
                 <h2>Choose a Ticket</h2>
-            </div>
+            </div> -->
 
-            <div class="outer-box">
+            <!-- <div class="outer-box">
                 <div class="row">
-                    <!-- Pricing Block -->
+                 
                     <div class="pricing-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                             <div class="title"><span class="icon flaticon-movie-tickets"></span> Day Pass</div>
@@ -823,10 +823,10 @@
                                 <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">BUY Ticket</span></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Pricing Block -->
-                    <div class="pricing-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
+                    <!-- <div class="pricing-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
                         <div class="inner-box">
                             <div class="title"><span class="icon flaticon-movie-tickets"></span> Full Pass</div>
                             <div class="price-box">
@@ -843,10 +843,10 @@
                                 <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">BUY Ticket</span></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Pricing Block -->
-                    <div class="pricing-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
+                    <!-- <div class="pricing-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
                         <div class="inner-box">
                             <div class="title"><span class="icon flaticon-movie-tickets"></span> Group Pass</div>
                             <div class="price-box">
@@ -867,8 +867,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!--End Pricing Section -->
+    </section> -->
+
 
         <!-- Event Info Section -->
     <section class="event-info-section">
@@ -897,8 +897,8 @@
                                     <div class="text">9.00 AM - 04.00 PM</div>
                                     <ul class="info-list">
                                         <li><span class="icon icon_profile"></span> Ankit Mundra</li>
-                                        <li><span class="icon icon_phone"></span> <a href="tel:+690-147-265-345">+123 456 7890</a></li>
-                                        <li><span class="icon icon_mail"></span> <a href="mailto:sopport@Eventrox.com">sopport@Eventrox.com</a></li>
+                                        <li><span class="icon icon_phone"></span> <a href="tel:+919667604115">+919667604115</a></li>
+                                        <li><span class="icon icon_mail"></span> <a href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></li>
                                     </ul>
                                 </div>
 
@@ -911,8 +911,12 @@
                                 <!--Tab-->
                                 <div class="tab" id="tab3">
                                     <h4><span class="icon fa fa-directions"></span> How to get there</h4>
-                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
+                                    <!-- <div class="text">Click here to get the directions on google maps</div> -->
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.877133205451!2d75.56304561457323!3d26.84385996951411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4850e05bee9b%3A0x1b8d67402d4eb863!2sManipal%20University%20Jaipur!5e0!3m2!1sen!2sin!4v1581143389721!5m2!1sen!2sin" width="480" height="100" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                        
                                 </div>
+                                <!-- <div class="text">
+                                  </div> -->
                             </div>
                         </div>
                     </div>
