--- a/index.html
+++ b/index.html
@@ -20,6 +20,33 @@
 
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+<style>
+    /*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
+@media screen and (min-width: 1024px){
+    #logo
+    {
+        max-width: 30%;
+        height: auto !important;
+    }
+}
+
+/*###Tablet(medium)###*/
+@media screen and (min-width : 768px) and (max-width : 1023px){
+     #logo
+     {
+         max-width: 40%;
+         height: auto !important;
+     }
+}
+
+/*### Smartphones (portrait and landscape)(small)### */
+@media screen and (min-width : 0px) and (max-width : 767px){
+    #logo{
+        max-width: 50%;
+        height: auto !important;
+    }
+}
+</style>
 
 </head>
 
@@ -38,8 +65,8 @@
     <header class="main-header header-style-two">
         <div class="main-box">
             <div class="auto-container clearfix">
-                <div class="logo-box">
-                    <div class="logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
+                <div class="logo-box" id="logo">
+                    <div class="logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
                 </div>
 
                 <!--Nav Box-->
@@ -1211,7 +1238,7 @@
         <div class="auto-container">
             <!-- Footer Content -->
             <div class="footer-content">
-                <div class="footer-logo"><a href="#"><img src="images/logo.png" alt=""></a></div>
+                <div id="logo" class="footer-logo" style="margin-left: auto; margin-right: auto;" ><a href="#"><img src="images/logo_image.png" alt=""></a></div>
                 <ul class="footer-nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
