--- a/index.html
+++ b/index.html
@@ -53,9 +53,20 @@
 <body>
 
 <div class="page-wrapper">
-
     <!-- Preloader -->
-    <div class="preloader"></div>
+    <div class="preloader">
+        <div class="bookshelf_wrapper">
+            <ul class="books_list">
+                <li class="book_item first"></li>
+                <li class="book_item second"></li>
+                <li class="book_item third"></li>
+                <li class="book_item fourth"></li>
+                <li class="book_item fifth"></li>
+                <li class="book_item sixth"></li>
+            </ul>
+            <div class="shelf"></div>
+        </div>
+    </div>
  	<!-- Header span -->
 
     <!-- Header Span -->
@@ -470,7 +481,7 @@
                             <span class="date">23</span>
                             <span class="month">Jan</span> 2021
                         </li>
-<!-- 
+<!--
                         <li class="tab-btn" data-tab="#tab-3">
                             <span class="day">Day 03</span>
                             <span class="date">03</span>
@@ -832,7 +843,7 @@
 
             <!-- <div class="outer-box">
                 <div class="row">
-                 
+
                     <div class="pricing-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                             <div class="title"><span class="icon flaticon-movie-tickets"></span> Day Pass</div>
@@ -940,7 +951,7 @@
                                     <h4><span class="icon fa fa-directions"></span> How to get there</h4>
                                     <!-- <div class="text">Click here to get the directions on google maps</div> -->
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.877133205451!2d75.56304561457323!3d26.84385996951411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4850e05bee9b%3A0x1b8d67402d4eb863!2sManipal%20University%20Jaipur!5e0!3m2!1sen!2sin!4v1581143389721!5m2!1sen!2sin" width="480" height="100" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                        
+
                                 </div>
                                 <!-- <div class="text">
                                   </div> -->
