--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <li class="book_item sixth"></li>
             </ul>
             <div class="shelf"></div>
+            <div class="shelf-logo"><img src="images/logo_image-min.png"/></div>
         </div>
     </div>
  	<!-- Header span -->
