--- a/about-jaipur.html
+++ b/about-jaipur.html
@@ -3,7 +3,7 @@
 <!-- Copied from https://expert-themes.com/html/eventrox/about-us.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 <head>
 <meta charset="utf-8">
-<title>Eventrox - Digital Events HTML Template | About Us</title>
+<title>SSIC 2021 | Manipal University</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -120,12 +120,12 @@
     <!--End Main Header -->
 
     <!--Page Title-->
-    <section class="page-title" style="background-image:url(images/background/5.jpg);">
+    <section class="page-title" style="background-image:url(images/background/hawa2.jpg);">
         <div class="auto-container">
-            <h1>About Us</h1>
+            <h1>"Blushing bride draped in pink, dancing in our dreams while the peacocks sing"</h1>
             <ul class="bread-crumb clearfix">
-                <li><a href="index.html">Home</a></li>
-                <li>About Us</li>
+
+                <li></li>
             </ul>
         </div>
     </section>
@@ -144,24 +144,24 @@
                 <div class="content-column col-lg-6 col-md-12 col-sm-12">
                     <div class="inner-column">
                         <div class="sec-title">
-                            <span class="title">ABOUT EVENT</span>
-                            <h2>Welcome to the World Digital Conference 2020</h2>
-                            <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat.</div>
+                            <span class="title">About Jaipur</span>
+                            <h2>Welcome to the PINK CITY</h2>
+                            <div class="text">The name “Jaipur” literally means “City (Pur) of Victory (Jai)”. This is in relation to Jai Singh’s (1699-1744) victory over Aurangzeb’s planned attack against Vrindavana to destroy temples and deities. Jai Singh had heard of the planned attack and quickly went to Vrindavana to warn the people and save as many temples as possible. </div>
                         </div>
-                        <ul class="list-style-one">
+                        <ul class="list-style-two">
                             <li>Multiple Announcements during the event.</li>
                             <li>Logo & company details on the WordCamp.</li>
                             <li>Dedicated blog post thanking each Gold.</li>
                             <li>Acknowledgment and opening and closing.</li>
                         </ul>
-                        <div class="btn-box"><a href="contact.html" class="theme-btn btn-style-three"><span class="btn-title">Register Now</span></a></div>
+                        <div class="btn-box"><a href="https://en.wikipedia.org/wiki/Jaipur" class="theme-btn btn-style-two"><span class="btn-title">More About Jaipur</span></a></div>
                     </div>
                 </div>
 
                 <!-- Image Column -->
                 <div class="image-column col-lg-6 col-md-12 col-sm-12">
                     <div class="image-box">
-                        <figure class="image wow fadeIn"><img src="images/resource/about-img-1.jpg" alt=""></figure>
+                        <figure class="image wow fadeIn"><img src="images/background/abt.jpg" alt=""></figure>
                     </div>
                 </div>
             </div>
@@ -170,119 +170,119 @@
     <!--End About Section -->
 
     <!-- Fun Fact Section -->
-    <section class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);">
-        <div class="auto-container">
-            <div class="fact-counter">
-                <div class="row clearfix">
+<!--    <section class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);">-->
+<!--        <div class="auto-container">-->
+<!--            <div class="fact-counter">-->
+<!--                <div class="row clearfix">-->
 
-                    <!--Column-->
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
-                        <div class="count-box">
-                            <span class="icon icon_headphones"></span>
-                            <span class="count-text" data-speed="3000" data-stop="190">0</span>
-                            <h4 class="counter-title">Participants</h4>
-                        </div>
-                    </div>
+<!--                    &lt;!&ndash;Column&ndash;&gt;-->
+<!--                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp">-->
+<!--                        <div class="count-box">-->
+<!--                            <span class="icon icon_headphones"></span>-->
+<!--                            <span class="count-text" data-speed="3000" data-stop="190">0</span>-->
+<!--                            <h4 class="counter-title">Participants</h4>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
-                    <!--Column-->
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
-                        <div class="count-box">
-                            <span class="icon icon_ribbon_alt"></span>
-                            <span class="count-text" data-speed="3000" data-stop="62">0</span>
-                            <h4 class="counter-title">Awards Win</h4>
-                        </div>
-                    </div>
+<!--                    &lt;!&ndash;Column&ndash;&gt;-->
+<!--                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">-->
+<!--                        <div class="count-box">-->
+<!--                            <span class="icon icon_ribbon_alt"></span>-->
+<!--                            <span class="count-text" data-speed="3000" data-stop="62">0</span>-->
+<!--                            <h4 class="counter-title">Awards Win</h4>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
-                    <!--Column-->
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
-                        <div class="count-box">
-                            <span class="icon icon_like"></span>
-                            <span class="count-text" data-speed="3000" data-stop="54">0</span>
-                            <h4 class="counter-title">Certified Teachers</h4>
-                        </div>
-                    </div>
+<!--                    &lt;!&ndash;Column&ndash;&gt;-->
+<!--                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">-->
+<!--                        <div class="count-box">-->
+<!--                            <span class="icon icon_like"></span>-->
+<!--                            <span class="count-text" data-speed="3000" data-stop="54">0</span>-->
+<!--                            <h4 class="counter-title">Certified Teachers</h4>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
-                    <!--Column-->
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
-                        <div class="count-box">
-                            <span class="icon icon_book_alt"></span>
-                            <span class="count-text" data-speed="3000" data-stop="38">0</span>
-                            <h4 class="counter-title">Courses</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--                    &lt;!&ndash;Column&ndash;&gt;-->
+<!--                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">-->
+<!--                        <div class="count-box">-->
+<!--                            <span class="icon icon_book_alt"></span>-->
+<!--                            <span class="count-text" data-speed="3000" data-stop="38">0</span>-->
+<!--                            <h4 class="counter-title">Courses</h4>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
     <!--End Fun Fact Section -->
 
     <!-- Features Section Two -->
-    <section class="features-section-two">
-        <div class="auto-container">
-            <div class="anim-icons">   
-                <span class="icon twist-line-1 wow zoomIn"></span>
-                <span class="icon twist-line-2 wow zoomIn" data-wow-delay="1s"></span>
-                <span class="icon twist-line-3 wow zoomIn" data-wow-delay="2s"></span>
-            </div>
+<!--    <section class="features-section-two">-->
+<!--        <div class="auto-container">-->
+<!--            <div class="anim-icons">   -->
+<!--                <span class="icon twist-line-1 wow zoomIn"></span>-->
+<!--                <span class="icon twist-line-2 wow zoomIn" data-wow-delay="1s"></span>-->
+<!--                <span class="icon twist-line-3 wow zoomIn" data-wow-delay="2s"></span>-->
+<!--            </div>-->
 
-            <div class="row">
-                <!-- Title Block -->
-                <div class="title-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="sec-title">
-                            <span class="title">Features</span>
-                            <h2>Our Feature</h2>
-                        </div>
-                    </div>
-                </div>
+<!--            <div class="row">-->
+<!--                &lt;!&ndash; Title Block &ndash;&gt;-->
+<!--                <div class="title-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">-->
+<!--                    <div class="inner-box">-->
+<!--                        <div class="sec-title">-->
+<!--                            <span class="title">Features</span>-->
+<!--                            <h2>Our Feature</h2>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <!-- Feature Block -->
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="icon-box"><span class="icon flaticon-lecture"></span></div>
-                        <h4><a href="about.html">Great Speakers</a></h4>
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-                    </div>
-                </div>
+<!--                &lt;!&ndash; Feature Block &ndash;&gt;-->
+<!--                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">-->
+<!--                    <div class="inner-box">-->
+<!--                        <div class="icon-box"><span class="icon flaticon-lecture"></span></div>-->
+<!--                        <h4><a href="about.html">Great Speakers</a></h4>-->
+<!--                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <!-- Feature Block -->
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="icon-box"><span class="icon flaticon-search"></span></div>
-                        <h4><a href="about.html">Experience</a></h4>
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-                    </div>
-                </div>
+<!--                &lt;!&ndash; Feature Block &ndash;&gt;-->
+<!--                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">-->
+<!--                    <div class="inner-box">-->
+<!--                        <div class="icon-box"><span class="icon flaticon-search"></span></div>-->
+<!--                        <h4><a href="about.html">Experience</a></h4>-->
+<!--                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <!-- Feature Block -->
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
-                    <div class="inner-box">
-                        <div class="icon-box"><span class="icon flaticon-diamond-1"></span></div>
-                        <h4><a href="about.html">Networking</a></h4>
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-                    </div>
-                </div>
+<!--                &lt;!&ndash; Feature Block &ndash;&gt;-->
+<!--                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">-->
+<!--                    <div class="inner-box">-->
+<!--                        <div class="icon-box"><span class="icon flaticon-diamond-1"></span></div>-->
+<!--                        <h4><a href="about.html">Networking</a></h4>-->
+<!--                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <!-- Feature Block -->
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
-                    <div class="inner-box">
-                        <div class="icon-box"><span class="icon flaticon-success"></span></div>
-                        <h4><a href="about.html">Party</a></h4>
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-                    </div>
-                </div>
+<!--                &lt;!&ndash; Feature Block &ndash;&gt;-->
+<!--                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">-->
+<!--                    <div class="inner-box">-->
+<!--                        <div class="icon-box"><span class="icon flaticon-success"></span></div>-->
+<!--                        <h4><a href="about.html">Party</a></h4>-->
+<!--                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <!-- Feature Block -->
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
-                    <div class="inner-box">
-                        <div class="icon-box"><span class="icon flaticon-employee"></span></div>
-                        <h4><a href="about.html">New People</a></h4>
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--                &lt;!&ndash; Feature Block &ndash;&gt;-->
+<!--                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">-->
+<!--                    <div class="inner-box">-->
+<!--                        <div class="icon-box"><span class="icon flaticon-employee"></span></div>-->
+<!--                        <h4><a href="about.html">New People</a></h4>-->
+<!--                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
     <!--End Features Section -->
 
     <!-- Call to action -->
