--- a/index.html
+++ b/index.html
@@ -1246,28 +1246,142 @@
     <!--End Subscribe Section -->
 
     <!-- Main Footer -->
-    <footer class="main-footer style-two">
-        <div class="auto-container">
-            <!-- Footer Content -->
-            <div class="footer-content">
-                <div id="logo" class="footer-logo" style="margin-left: auto; margin-right: auto;" ><a href="#"><img src="images/logo_image.png" alt=""></a></div>
-                <ul class="footer-nav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-                <div class="copyright-text">© Copyright 2019 All Rights Reserved by <a href="index.html">Expert-Themes</a></div>
-                <ul class="social-icon-one">
-                    <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                    <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                    <li><a href="#"><span class="fab fa-pinterest"></span></a></li>
-                    <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
-                </ul>
+
+    <footer class="main-footer">
+        <!--Widgets Section-->
+        <div class="widgets-section">
+            <div class="auto-container">
+                <div class="row">
+                    <!--Big Column-->
+                    <div class="big-column col-xl-6 col-lg-12 col-md-12 col-sm-12">
+                        <div class="row">
+                            <!--Footer Column-->
+                            <div class="footer-column col-xl-7 col-lg-6 col-md-6 col-sm-12">
+                                <div class="footer-widget about-widget">
+                                    <div class="logo">
+                                        <a href="index.html"><img src="images/logo_image-min.png" alt=""></a>
+                                    </div>
+                                    <div class="text">
+                                        <p>Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world</p>
+                                    </div>
+                                    <ul class="social-icon-one social-icon-colored">
+                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <!--Footer Column-->
+                            <div class="footer-column col-xl-5 col-lg-6 col-md-6 col-sm-12">
+                                <div class="footer-widget useful-links">
+                                    <h2 class="widget-title">Useful Links</h2>
+                                    <ul class="user-links">
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="speakers.html">Speakers</a></li>
+                                        <li><a href="organize.html">Organizers</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Big Column-->
+                    <div class="big-column col-xl-6 col-lg-12 col-md-12 col-sm-12">
+                        <div class="row">
+                            <!--Footer Column-->
+                            <div class="footer-column col-lg-6 col-md-6 col-sm-12">
+                                <!--Footer Column-->
+                                <div class="footer-widget contact-widget">
+                                    <h2 class="widget-title">Contact Us</h2>
+                                    <!--Footer Column-->
+                                    <div class="widget-content">
+                                        <ul class="contact-list">
+                                            <li>
+                                                <span class="icon flaticon-phone"></span>
+                                                <div class="text"><a href="tel:+91-96676-04115">+91-96676-04115</a></div>
+                                            </li>
+
+                                            <li>
+                                                <span class="icon flaticon-paper-plane"></span>
+                                                <div class="text"><a href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></div>
+                                            </li>
+
+                                            <li>
+                                                <span class="icon flaticon-worldwide"></span>
+                                                <div class="text">Bagru, Near GVK Toll Plaza<br> Jaipur, Rajasthan , Pin-303007</div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--Footer Column-->
+                            <div class="footer-column col-lg-6 col-md-6 col-sm-12">
+                                <!--Footer Column-->
+                                <div class="footer-widget instagram-widget">
+                                    <h2 class="widget-title">Instagram Gallery</h2>
+                                    <div class="widget-content">
+                                        <div class="outer clearfix">
+                                            <figure class="image">
+                                                <a href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/1.jpg" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/aboutJaipur/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/2.jpg" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/aboutJaipur/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/3.jpg" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/aboutJaipur/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/4.jpg" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/aboutJaipur/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/5.jpg" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/6.jpg" alt=""></a>
+                                            </figure>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </footer>
+
+
+
+        <!--End pagewrapper-->
+
+
+        <!--Scroll to top-->
+        <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
+        <script src="js/jquery.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery-ui.js"></script>
+        <script src="js/jquery.fancybox.js"></script>
+        <script src="js/appear.js"></script>
+        <script src="js/owl.js"></script>
+        <script src="js/wow.js"></script>
+        <script src="js/script.js"></script>
+        <!-- Color Setting -->
+        <script src="js/color-settings.js"></script>
+        <!--Google Map APi Key-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc"></script>
+        <script src="js/map-script.js"></script>
+        <!--End Google Map APi-->>
     <!-- End Footer -->
 
 </div>
