--- a/ssic.html
+++ b/ssic.html
@@ -164,10 +164,10 @@
     <!--Page Title-->
     <section class="page-title" style="background-image:url(images/background/5.jpg);">
         <div class="auto-container">
-            <h1>About Us</h1>
+            <h1>SSIC 2017</h1>
             <ul class="bread-crumb clearfix">
-                <li><a href="index.html">Home</a></li>
-                <li>About Us</li>
+
+                <li>Smart System International Conference</li>
             </ul>
         </div>
     </section>
@@ -186,9 +186,9 @@
                 <div class="content-column col-lg-6 col-md-12 col-sm-12">
                     <div class="inner-column">
                         <div class="sec-title">
-                            <span class="title">ABOUT EVENT</span>
-                            <h2>Welcome to the World Digital Conference 2020</h2>
-                            <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat.</div>
+                            <span class="title">1st INTERNATIONAL EVENT</span>
+                            <h2>SMART SYSTEMS, INNOVATION AND COMPUTING (SSIC-2017)</h2>
+                            <div class="text">The conference SSIC 2017 was held on April 14-16, 2017. It brought together a wide range of community focused professionals and industrial experts who have the potential and expertise on the smart systems and Computing. Faculty members, paper presenters, keynote and tutorial participants, students have benefited in many ways from this conference. Total 85 scientific papers out of 327 were presented by authors from India and other countries. Different Invited, Keynote and Tutorial Speakers from different countries addressed to audience and shared knowledge and rich experience of application of <b>Smart Systems</b> in their companies and countries.</div>
                         </div>
                         <ul class="list-style-one">
                             <li>Multiple Announcements during the event.</li>
