--- a/ssic.html
+++ b/ssic.html
@@ -214,33 +214,37 @@
     <!-- Fun Fact Section -->
     <section class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);">
         <div class="auto-container">
+            <div class="sec-title text-center">
+                <span class="title" style="color:#fff;">PREVIOUS STATISTICS</span>
+                <h2 style="color:#fff;">2019</h2>
+            </div>
             <div class="fact-counter">
                 <div class="row clearfix">
 
                     <!--Column-->
                     <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="count-box">
-                            <span class="icon icon_headphones"></span>
-                            <span class="count-text" data-speed="3000" data-stop="190">0</span>
-                            <h4 class="counter-title">Participants</h4>
+                            <span class="icon icon_check"></span>
+                            <span class="count-text" data-speed="3000" data-stop="210">0</span>
+                            <h4 class="counter-title">Total submissions</h4>
                         </div>
                     </div>
 
                     <!--Column-->
                     <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
                         <div class="count-box">
-                            <span class="icon icon_ribbon_alt"></span>
-                            <span class="count-text" data-speed="3000" data-stop="62">0</span>
-                            <h4 class="counter-title">Awards Win</h4>
+                            <span class="icon icon_shield"></span>
+                            <span class="count-text" data-speed="3000" data-stop="192">0</span>
+                            <h4 class="counter-title">National</h4>
                         </div>
                     </div>
 
                     <!--Column-->
                     <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
                         <div class="count-box">
-                            <span class="icon icon_like"></span>
-                            <span class="count-text" data-speed="3000" data-stop="54">0</span>
-                            <h4 class="counter-title">Certified Teachers</h4>
+                            <span class="icon icon_globe-2"></span>
+                            <span class="count-text" data-speed="3000" data-stop="18">0</span>
+                            <h4 class="counter-title">International</h4>
                         </div>
                     </div>
 
@@ -248,8 +252,8 @@
                     <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
                         <div class="count-box">
                             <span class="icon icon_book_alt"></span>
-                            <span class="count-text" data-speed="3000" data-stop="38">0</span>
-                            <h4 class="counter-title">Courses</h4>
+                            <span class="count-text" data-speed="3000" data-stop="70">0</span>
+                            <h4 class="counter-title">Accepted Papers</h4>
                         </div>
                     </div>
                 </div>
@@ -604,23 +608,7 @@
         <!--End Google Map APi-->>
         <!-- End Footer -->
 
-<!--Scroll to top-->
-<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
-<script src="js/jquery.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/script.js"></script>
-<!-- Color Setting -->
-<script src="js/color-settings.js"></script>
-<!--Google Map APi Key-->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc"></script>
-<script src="js/map-script.js"></script>
-<!--End Google Map APi-->
+
 </body>
 <!-- Copied from https://expert-themes.com/html/eventrox/about-us.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 </html>
