--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <style>
         /*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
+
+            /*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
         @media screen and (min-width: 1024px){
             #logo
             {
@@ -96,7 +98,7 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class="current dropdown"><a href="index.html">Home</a></li>
+                                <li class="dropdown"><a href="index.html">Home</a></li>
                                 <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="ssic.html">SSIC 2017</a></li>
@@ -105,7 +107,7 @@
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
-                                <li ><a href="speakers.html">Speakers</a></li>
+                                <li ><a class="current" href="speakers.html">Speakers</a></li>
                                 <li ><a href="organizers.html">Organizers</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
@@ -1197,32 +1199,6 @@
 
 
         <!--End pagewrapper-->
-
-
-        <!--Scroll to top-->
-        <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
-        <script src="js/jquery.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery-ui.js"></script>
-        <script src="js/jquery.fancybox.js"></script>
-        <script src="js/appear.js"></script>
-        <script src="js/owl.js"></script>
-        <script src="js/wow.js"></script>
-        <script src="js/script.js"></script>
-        <!-- Color Setting -->
-        <script src="js/color-settings.js"></script>
-        <!--Google Map APi Key-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc"></script>
-        <script src="js/map-script.js"></script>
-        <!--End Google Map APi-->>
-    <!-- End Footer -->
-
-
-<!--End pagewrapper-->
-
-<!-- Color Palate / Color Switcher -->
-
 
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
