--- a/speakers-detail.html
+++ b/speakers-detail.html
@@ -334,13 +334,13 @@
                                     <div class="text">
                                         <p>We have very good strength in innovative technology and tools with over 35 years of experience. We makes long-term investments goal in global companies in different sectors, mainly in Europe and other countries.</p>           
                                     </div>
-                                    <ul class="social-icon-one social-icon-colored">
+                                    <!-- <ul class="social-icon-one social-icon-colored">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
                                         <li><a href="#"><i class="fab fa-youtube"></i></a></li>
                                         <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
                             </div>
 
