--- a/ssic2019.html
+++ b/ssic2019.html
@@ -480,13 +480,13 @@
                                     <div class="text">
                                         <p>Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world</p>
                                     </div>
-                                    <ul class="social-icon-one social-icon-colored">
+                                    <!-- <ul class="social-icon-one social-icon-colored">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
                                         <li><a href="#"><i class="fab fa-youtube"></i></a></li>
                                         <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
                             </div>
 
