--- a/pricing.html
+++ b/pricing.html
@@ -109,7 +109,7 @@
                     <!-- Outer box -->
                     <div class="outer-box">
                         <!--Search Box-->
-                        <div class="search-box-outer">
+                        <!-- <div class="search-box-outer">
                             <div class="dropdown">
                                 <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flaticon-search"></span></button>
                                 <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
@@ -125,7 +125,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Button Box -->
                         <div class="btn-box">
